third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/copy_full_invalid.old.exp

Diagnostics:
error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_full_invalid.move:13:9
   │
12 │         let f = &mut x;
   │                 ------ previous mutable local borrow
13 │         x + 0;
   │         ^ copied here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_full_invalid.move:19:9
   │
18 │         let f = id_mut(&mut x);
   │                 --------------
   │                 │      │
   │                 │      previous mutable local borrow
   │                 used by mutable call result
19 │         x + 0;
   │         ^ copied here
20 │         *f;
   │         -- conflicting reference `f` used here
